@@ -487,7 +487,7 @@ contact_server(const char* svr, struct config_file* cfg, int statuscmd)
 {
 	struct sockaddr_storage addr;
 	socklen_t addrlen;
-	int addrfamily = 0;
+	int addrfamily = 0, proto = IPPROTO_TCP;
 	int fd, useport = 1;
 	/* use svr or the first config entry */
 	if(!svr) {
@@ -521,6 +521,7 @@ contact_server(const char* svr, struct config_file* cfg, int statuscmd)
 		addrlen = (socklen_t)sizeof(struct sockaddr_un);
 		addrfamily = AF_LOCAL;
 		useport = 0;
+		proto = 0;
 #endif
 	} else {
 		if(!ipstrtoaddr(svr, cfg->control_port, &addr, &addrlen))
@@ -528,8 +529,8 @@ contact_server(const char* svr, struct config_file* cfg, int statuscmd)
 	}
 
 	if(addrfamily == 0)
-		addrfamily = addr_is_ip6(&addr, addrlen)?AF_INET6:AF_INET;
-	fd = socket(addrfamily, SOCK_STREAM, 0);
+		addrfamily = addr_is_ip6(&addr, addrlen)?PF_INET6:PF_INET;
+	fd = socket(addrfamily, SOCK_STREAM, proto);
 	if(fd == -1) {
 #ifndef USE_WINSOCK
 		fatal_exit("socket: %s", strerror(errno));
@@ -613,13 +614,17 @@ remote_read(SSL* ssl, int fd, char* buf, size_t len)
 		}
 		buf[r] = 0;
 	} else {
-		ssize_t rr = read(fd, buf, len-1);
+		ssize_t rr = recv(fd, buf, len-1, 0);
 		if(rr <= 0) {
 			if(rr == 0) {
 				/* EOF */
 				return 0;
 			}
-			fatal_exit("could not read: %s", strerror(errno));
+#ifndef USE_WINSOCK
+			fatal_exit("could not recv: %s", strerror(errno));
+#else
+			fatal_exit("could not recv: %s", wsa_strerror(WSAGetLastError()));
+#endif
 		}
 		buf[rr] = 0;
 	}
@@ -634,8 +639,13 @@ remote_write(SSL* ssl, int fd, const char* buf, size_t len)
 		if(SSL_write(ssl, buf, (int)len) <= 0)
 			ssl_err("could not SSL_write");
 	} else {
-		if(write(fd, buf, len) < (ssize_t)len)
-			fatal_exit("could not write: %s", strerror(errno));
+		if(send(fd, buf, len, 0) < (ssize_t)len) {
+#ifndef USE_WINSOCK
+			fatal_exit("could not send: %s", strerror(errno));
+#else
+			fatal_exit("could not send: %s", wsa_strerror(WSAGetLastError()));
+#endif
+		}
 	}
 }
 
